# opencode-on-im

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  opencode.json  package-lock.json  package.json  pyproject.toml  tsconfig.json  产品形态.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docker/: Dockerfile  docker-compose.yml
docker/rootfs/etc/cont-init.d/: 01-init-cloudify
docker/rootfs/etc/s6-overlay/s6-rc.d/opencode/: finish  run
docker/rootfs/etc/s6-overlay/s6-rc.d/opencode-im-bot/: finish  run
docker/rootfs/etc/s6-overlay/s6-rc.d/ttyd/: finish  run
docker/rootfs/etc/s6-overlay/scripts/: healthcheck
docs/: ARCHITECTURE.md  CONFIGURATION.md  DINGTALK_SETUP.md  MVP_ISSUES.md  PROXY_BEST_PRACTICE.md  SETUP_GUIDE.md  SPECIFICATION.md  STRATEGIC_ANALYSIS.md  TELEGRAM_SETUP.md  UI_UX_DESIGN.md  变现模式.txt
scripts/: create-issues.sh  entrypoint.sh
src-ts/: index.ts  standalone.ts  state.ts
src-ts/telegram/: bot.ts
src/opencode_on_im/: __init__.py  __main__.py
src/opencode_on_im/adapters/: __init__.py  base.py
src/opencode_on_im/adapters/dingtalk/: __init__.py  bot.py  formatters.py
src/opencode_on_im/adapters/telegram/: __init__.py  bot.py  formatters.py  handlers.py
src/opencode_on_im/core/: __init__.py  app.py  config.py  instance.py  notification.py  session.py  wizard.py
src/opencode_on_im/opencode/: __init__.py  client.py  events.py
src/opencode_on_im/renderers/: __init__.py  image.py
src/opencode_on_im/utils/: __init__.py  upgrade.py
test-env/: Dockerfile  docker-compose.yml  test-env.sh
tests/: approve-format.test.js  conftest.py  persistence.test.js
tests/test_adapters/: test_base.py  test_dingtalk_formatters.py  test_formatters.py  test_telegram_handlers.py
tests/test_core/: test_app.py  test_config.py  test_instance.py  test_notification.py  test_session.py  test_wizard.py
tests/test_integration/: mock_opencode.py  test_e2e.py
tests/test_opencode/: test_client.py  test_events.py
tests/test_renderers/: __init__.py  test_image.py
tests/test_utils/: test_upgrade.py
